Fix line height and margin issue
Fixed faq page line height issue where lines were overlapping

Fixed margin issues on the same page that arose

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -774,6 +774,11 @@ ol, ul, td {
     grid-gap: 1rem;
 }
 
+#faq h2 {
+    line-height: 3rem;
+    margin: 2rem;
+}
+
 #faq h1 {
     grid-column: var(--titleSpan);
 }
